tests/baselines/reference/FunctionExpression2_es6.errors.txt
tests/cases/conformance/es6/functionExpressions/FunctionExpression2_es6.ts(1,18): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/functionExpressions/FunctionExpression2_es6.ts (1 errors) ====
    var v = function * foo() { }
                     ~
!!! error TS9001: 'generators' are not currently supported.